Fri May  4 02:56:30 BST 2001  Colin Watson  <cjwatson@debian.org>

	* README: Update for new NLS configuration methods. Reflect renaming
	  of configuration file from man_db.config to man_db.conf.

Fri May  4 00:18:23 BST 2001  Colin Watson  <cjwatson@debian.org>

	* stamp-h.in: Remove (generated by GNUmakefile).

Fri May  4 00:17:50 BST 2001  Colin Watson  <cjwatson@debian.org>

	* GNUmakefile.in, configure.in, include/Defines.in,
	  libdb/Makefile.in, libdb/db_delete.c, libdb/db_lookup.c,
	  libdb/db_store.c, libdb/db_ver.c, man/Makefile.in,
	  src/Makefile.in, src/lexgrog.l-2.3.8, src/lexgrog.l-2.4a,
	  src/wrapper.c: Dispose of all the old catgets stuff. Replace with
	  gettext idioms where appropriate.

	* libdb/man_db-nls.h, src/man_db-nls.h: Remove (obsolete with
	  gettext).

	* include/config.h.in: Remove (generated by autoheader).

Thu May  3 01:17:08 BST 2001  Colin Watson  <cjwatson@debian.org>

	* GNUmakefile.in: Strip .po from language names; fix it's -> its
	  typo.

	* configure.in: Stop trying to guess the package name and version
	  number from the current directory name.

Wed May  2 18:38:49 BST 2001  Colin Watson  <cjwatson@debian.org>

	* src/manp.c: Remove #include of security.h (now merged elsewhere).
	  (pathappend): Constify second argument.
	  (mkcatdirs): Eliminate DIRLIST; now takes mandir and catdir as
	  arguments.
	  (add_2_dirlist): Rename to add_to_dirlist(); return void, and
	  otherwise eliminate use of DIRLIST. As mentioned below, we now use
	  a linked list instead.
	  (read_config_file): Update accordingly.

	* src/security.c: *uid no longer static for now, as other objects
	  use them.
	* src/man.c: Declare ruid and euid extern here now that security.h
	  is gone.

	* src/check_mandirs.c (update_db): Close dbf rather than database.

Wed May  2 17:27:22 BST 2001  Colin Watson  <cjwatson@debian.org>

	* acinclude.m4: New file. Restore definitions inadvertently removed
	  from aclocal.m4 a few changes ago.