@@ -1,3 +1,12 @@
+Fri May  4 03:34:54 BST 2001  Colin Watson  <cjwatson@debian.org>
+
+	* GNUmakefile.in (dist): Update set of installed files somewhat. No
+	  need to build man_db-nls.h any more.
+
+	* man/Makefile.in: Declare ALL_LINGUAS and LINGUAS.
+
+	* src/man.sh: Remove (obsoleted by src/wrapper.c).
+
 Fri May  4 02:56:30 BST 2001  Colin Watson  <cjwatson@debian.org>
 
 	* README: Update for new NLS configuration methods. Reflect renaming
